2005-01-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/sequential-music.cc: remove file.

	* lily/include/lyric-combine-music.hh ("music.hh"): remove file.

	* lily/slur-scoring.cc (get_best_curve): only switch on
	DEBUG_SLUR_SCORING for non NDEBUG builds.

	* lily/include/music.hh (class Music): replace Music::start_mom()
	by start-callback property

	* lily/include/grace-music.hh: remove file. 

	* lily/stem.cc (height): robustness fix.

	* lily/time-scaled-music.cc: remove file.

	* lily/include/music.hh (class Music): include SCM init argument.
	(class Music): replace Music::get_length() virtual by
	length-callback property everywhere.

	* scripts/convert-ly.py (conv): add  # to \property scalar value.

	* mf/GNUmakefile: don't install *list.ly

2005-01-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile (CFF_FILES): Bugfix: only big cheeses and braces.

2005-01-12  Werner Lemberg  <wl@gnu.org>

	This patch addresses the following problems in the feta sources
	files which contribute to the fetaXX fonts.

	. Many fixes for rasterization at low resolutions (consistent use of
	  `vround' and `hround', integer shift values for paths, applying
	  `eps' for mirrored paths, use of `define_whole_pixels' and
	  friends, etc.) -- while this probably looks like a waste of time
	  it has revealed deficiencies in some glyph shapes.  See comment at
	  the end of feta-params.mf how vertical symmetry is achieved.

	. The `---' operator has been replaced everywhere with `--'; this
	  both improves and considerably reduces the font size after
	  conversion with mf2pt1.

	These change aren't explicitly mentioned below since virtually all
	glyphs are affected.

	Other notable differences:

	. Glyphs from feta-accordion.mf now have charboxes around the
	  outline.

	. Fixed incorrect charbox for `accDot'.

	. The `rcomma' and `lcomma' glyphs were distorted due to a typo.

	. Fixed position of the bow in the `upprall' glyph and its siblings.
